# RoboticArm_BasicPractice

./: README.md  SCARA_Matlab_Practice.m
gaussion/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
gaussion/devel/lib/pkgconfig/: gauss_description.pc  gauss_moveit.pc  moveit.pc
gaussion/src/gauss/: CMakeLists.txt  package.xml
gaussion/src/gauss/launch/: display.launch
gaussion/src/gauss/urdf/: gauss.urdf.xacro
gaussion/src/gauss_moveit/: .setup_assistant  CMakeLists.txt  package.xml
gaussion/src/gauss_moveit/config/: fake_controllers.yaml  gauss.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
gaussion/src/gauss_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gauss_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
robot/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
robot/devel/lib/pkgconfig/: dynamixel_workbench_msgs.pc  dynamixel_workbench_toolbox.pc  scara_robot.pc
robot/src/moveit/: .setup_assistant
robot/src/moveit/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  scara.srdf
robot/src/scara_robot/: CMakeLists.txt
(+16 files in other folders)
